--- a/index.html
+++ b/index.html
@@ -10,9 +10,52 @@
 </head>
 
 <body>
-    <header></header>
-    <main></main>
-    <footer>Zaawansowane technologie internetowe - Projekt WSB 2023</footer>
+    <header>
+        <div>
+            <h1>Przewodnik po jedzeniu</h1>
+            <h2>Wyjedź ze mną po kulinarnych przygodach</h2>
+        </div>
+        <a href="#main">Czytaj więcej</a>
+    </header>
+    <main id="main">
+        <section class="all_places">
+            <h2>Dania warte zjedzenia</h2>
+            <div>
+                <div class="first_dish">
+                    <h3>Włochy</h3>
+                    <img src="./img/carbonara.jpg" alt="carbonara">
+                    <p><b>Pasta alla carbonara (spaghetti alla carbonara)</b> – potrawa kuchni włoskiej złożona z makaronu, jajek, pancetty lub guanciale, sera pecorino romano lub parmezanu oraz czarnego pieprzu. Niepoprawnym jest mówienie o „sosie carbonara”,
+                        ponieważ makaron i pozostałe składniki stanowią tu nierozerwalną całość.</p>
+                    <p>W niektórych przepisach zamiast całych jaj używa się samych żółtek. Pieprz jest obowiązkowy. Najpowszechniej używanym makaronem jest spaghetti. Tuż za nim plasuje się bucatini. Używa się też m.in. makaronu w kształcie tzw. rurek (penne,
+                        rigatoni, maccheroni).</p>
+                    <p>Kwestią sporną jest dodatek śmietany. Zdaniem tradycjonalistów dodanie jej do carbonary jest błędem. Używają jej głównie obcokrajowcy. Inne rzadziej spotykane składniki (głównie poza granicami Włoch) to np. smażona cebula, czosnek
+                        lub białe wino.</p>
+                </div>
+                <div class="secound_dish">
+                    <h3>United States of America</h3>
+                    <img src="./img/pizza.jpg" alt="Chicago style pizza">
+                    <p><b>Chicago-style pizza</b>, inaczej zwana też deep-dish pizza, to pizza na grubym cieście pochodząca z Chicago. Pieczona w głębokiej blasze, przypomina bardziej ciasto niż tradycyjną pizzę. Na samym spodzie pizzy kładzie się ser, później
+                        pozostałe dodatki, najczęściej kiełbasę (ang. Italian sausage), a dopiero ostatnia warstwa to sos pomidorowy (ang. tomato sauce). Chicago-style pizza prawdopodobnie została wynaleziona w Pizzerii Uno w Chicago w 1943 i obecnie
+                        cieszy się popularnością w całych Stanach Zjednoczonych.</p>
+                </div>
+                <div class="third_dish">
+                    <h3>Turcja</h3>
+                    <img src="./img/kebab.jpg" alt="Kebab pita">
+                    <p><b>Sallam Allekum</b> Kebab to turecka potrawa, która cieszy się ogromną popularnością Polaków. Jest wiele rodzajów kebabów, dzięki temu każdy może znaleźć coś dla siebie. Dobrej jakości mięso i świeże surówki, a także pyszne sosy
+                        gwarantują, że kebab będzie pełnowartościowym, sycącym posiłkiem. Opcją dla osób, które ograniczają spożywanie mięsa, jest kebab z falafelami, czyli smażonymi kuleczkami z ciecierzycy.</p>
+                </div>
+                <div class="fourth_dish">
+                    <h3>Bługaria</h3>
+                    <img src="./img/gjuwecz.jpg" alt="Gjuwecz">
+                    <p>Gjuwecz jest to ogólna nazwa bułgarskich potraw, przygotowanych w glinianym naczyniu (o tej samej nazwie), które umożliwia długie duszenie potraw w niewysokich temperaturach.
+                        <p>Głównym składnikiem potrawy są warzywa oraz mięso (opcjonalne). Poniżej proponujemy przepis na przepyszny gjuwecz z mięsem.</p>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p>Zaawansowane technologie internetowe - Projekt WSB 2023</p>
+    </footer>
 </body>
 
 </html>
