--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <title>Aplikacja PWA</title>
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#359b29">
     <link rel="stylesheet" href="style.css">
 </head>
 
