--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
     <footer>
         <p>Zaawansowane technologie internetowe - Projekt WSB 2023</p>
     </footer>
+    <script src="sw.js">
+    </script>
 </body>
 
 </html>
