--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main id="main">
         <section class="all_dishes">
             <h2>Dania warte zjedzenia</h2>
-            <div>
+            <div class="dishes">
                 <div class="dish">
                     <h3>Włochy</h3>
                     <img src="./img/carbonara.jpg" alt="carbonara">
