--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
                 <div class="dish">
                     <h3>Bługaria</h3>
                     <img src="./img/gjuwecz.jpg" alt="Gjuwecz">
-                    <p>Gjuwecz jest to ogólna nazwa bułgarskich potraw, przygotowanych w glinianym naczyniu (o tej samej nazwie), które umożliwia długie duszenie potraw w niewysokich temperaturach.
+                    <p>
+                        <b>Gjuwecz</b> jest to ogólna nazwa bułgarskich potraw, przygotowanych w glinianym naczyniu (o tej samej nazwie), które umożliwia długie duszenie potraw w niewysokich temperaturach.
                         <p>Głównym składnikiem potrawy są warzywa oraz mięso (opcjonalne). Poniżej proponujemy przepis na przepyszny gjuwecz z mięsem.</p>
                 </div>
             </div>
