Added changes and buttons

--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
                 <div class="dish">
                     <h3>Włochy</h3>
                     <img src="./img/carbonara.jpg" alt="carbonara">
-                    <p><b>Pasta alla carbonara (spaghetti alla carbonara)</b> – potrawa kuchni włoskiej złożona z makaronu, jajek, pancetty lub guanciale, sera pecorino romano lub parmezanu oraz czarnego pieprzu. Niepoprawnym jest mówienie o „sosie carbonara”,
+                    <p><b>Pasta alla carbonara (spaghetti alla carbonara)</b> potrawa kuchni włoskiej złożona z makaronu, jajek, pancetty lub guanciale, sera pecorino romano lub parmezanu oraz czarnego pieprzu. Niepoprawnym jest mówienie o „sosie carbonara”,
                         ponieważ makaron i pozostałe składniki stanowią tu nierozerwalną całość.</p>
                     <p>W niektórych przepisach zamiast całych jaj używa się samych żółtek. Pieprz jest obowiązkowy. Najpowszechniej używanym makaronem jest spaghetti. Tuż za nim plasuje się bucatini. Używa się też m.in. makaronu w kształcie tzw. rurek (penne,
                         rigatoni, maccheroni).</p>
                     <p>Kwestią sporną jest dodatek śmietany. Zdaniem tradycjonalistów dodanie jej do carbonary jest błędem. Używają jej głównie obcokrajowcy. Inne rzadziej spotykane składniki (głównie poza granicami Włoch) to np. smażona cebula, czosnek
                         lub białe wino.</p>
+                        <button type="button" class="btn btn-outline-info rounded float-right btn-sm" data-toggle="modal" data-target="#carbonara">Zobacz Przepis</button>
                 </div>
                 <div class="dish">
                     <h3>United States of America</h3>
