--- a/index.html
+++ b/index.html
@@ -36,11 +36,10 @@
                         <li class="nav-item dropdown active">
                             <a class="nav-link dropdown-toggle font-weight-bold ml-auto" href="#" id="navbarDropdown1"
                                 role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Test
+                                Dania
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                                <a class="dropdown-item" href=""><img src="" class="width-20px" alt="Ikona"
-                                        loading="lazy"> Test</a>
+                                <a class="dropdown-item" href="./index.html">Dania kuchni świata</a>
                                 <div class="dropdown-divider"></div>
                             </div>
                         </li>
@@ -565,13 +564,37 @@
                 </div>
             </div>
         </div>
-
-
-
     </main>
-    <footer>
-        <p>Zaawansowane technologie internetowe - Projekt WSB 2023</p>
-    </footer>
+    <section class="footer">
+        <div class="containter">
+            <div class="row">
+                <div class="col-md-4">
+                    <img src="./img/diet.png" class="d-inline-block mb-3 logo" alt="logo"
+                        style="width: 60px; height: 60px;">
+                    <p class="mt-2 text-justify text-white">Sprawdź najlepsze przepisy z różnych krajów świata. Dzięki
+                        naszemu serwisowi również możesz zobaczyć pogodę we wszystkich miastach świata.</p>
+                </div>
+                <div class="col-md-4"></div>
+                <div class="col-md-4 ">
+                    <h4 class="text-white">Masz pytania?</h4>
+                    <span style="color: rgba(255, 255, 255, 0.5);"> +48
+                        666-555-444</span><br>
+                    <span style="color: rgba(255, 255, 255, 0.5);" id="">
+                        kuchnie@swiata.pl</span>
+                    <ul style="list-style: none; padding: 0; margin: 0;" class="mt-3">
+                        <li>Kuchnie świata Sp. z o.o.</li>
+                        <li>ul. Świetlista 184</li>
+                        <li>Gdańsk 80-360</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="text-center col-md-12">
+            <h6 style="color: rgba(255, 255, 255, 0.5);">Copyright © 2023 Made by Miłosz Radawiec | Zaawansowane
+                Technologie Internetowe - WSB | Github: <a style="color: rgba(255, 255, 255, 0.5);"
+                    href="https://github.com/mradawiec">mradawiec</a></h6>
+        </div>
+    </section>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
