--- a/rejestracja/rejestracja.html
+++ b/rejestracja/rejestracja.html
@@ -17,9 +17,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="logowanie.js"></script>
+
 </head>
 
 <body>
+    <div id="loggedInUser" style="display: none;"></div>
     <header>
         <nav class="navbar navbar-dark lighten-4  navbar-expand-lg">
             <div class="container position-relative">
